# Rustify

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  NEW_FEATURES.md  PRODUCTION_READY.md  README.md
src/: app.rs  audio.rs  error.rs  library.rs  main.rs  settings.rs  ui.rs
src/models/: folder.rs  mod.rs  song.rs
src/player/: music_player.rs
src/ui/: controls.rs  layout.rs  layout_tests.rs  mod.rs  search.rs  song_list.rs  theme.rs
src/utils/: format.rs
